<?xml version="1.0"?>
<package>
  <name>nostop_agent_sensor</name>
  <version>0.0.0</version>
  <description>The nostop_agent_sensor package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="simone@todo.todo">simone</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>base_math</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  
  <run_depend>base_math</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

</package>